# tap-forem

./: .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: ci_workflow.yml  constraints.txt  release.yaml  test.yaml  test.yml
tap_forem/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
